Add Cassandra 5 CQL sandbox